# rpm

./: .cvsignore  .gear-rules  .gitignore  CHANGES  Doxyfile.in  GROUPS  INSTALL  Makefile.am  README.ALT  README.ALT-ru_RU.KOI8-R  README.ALT-ru_RU.UTF-8  acconfig.h  aclocal.m4  autogen.sh  build.c  configure.ac  configure.in  gendiff  installplatform  macros.in  platform.in  preinstall.am  rpm-4_0.spec  rpm-build.buildreq  rpm.spec.in  rpm2cpio.c  rpmbuild.c  rpminit  rpminit.1  rpmpopt.in  rpmqv.c  rpmrc.in  system.h  update-alternatives  update-alternatives.8
.gear/: rules
alt/: rpm.spec
autodeps/: hpux.prov  hpux.req  irix6.prov  irix6.req  linux.prov.in  linux.req.in  osf.prov  osf.req
doc/: Makefile.am  gendiff.1  rpm.8  rpmbuild.8
doc/ja/: rpm.8
doc/manual/: builddependencies  dependencies  macros  queryformat  relocatable  tsort
lib/: Makefile.am  al.c  al.h  closeall.c  cpio.c  cpio.h  depends.c  depends.h  formats.c  fs.c  fsm.c  fsm.h  header.c  header.h  header_internal.c  header_internal.h  headerfmt.c  manifest.c  misc.c  misc.h  order.c  package.c  poptALL.c  poptI.c  poptK.c  poptQV.c  problems.c  psm.c  psm.h  query.c  rpmchecksig.c  rpmcli.h  rpmdb.c  rpmdb.h  rpmds.c  rpmds.h  rpmfi.c  rpmgi.c  rpminstall.c  rpmlead.c  (+23 more)
misc/: Makefile.am
plugins/: Makefile.am  hdrcache.c  ima.c  mcdb.c  selinux.c  syslog.c
po/: POTFILES.in  br.po  cs.po  eo.po  ja.po  rpm.pot  ru.po  tr.po  uk.po
python/: Makefile.am  db-py.c  header-py.c  header-py.h  poptmodule.c  rpmds-py.c  rpmmodule.c  rpmts-py.c  setup.py.in  upgrade.c
rpmaltheadercache/: Makefile.am  rpmaltheadercache.c  rpmaltheadercache.h
rpmdb/: Makefile.am  db1.c  db3.c  dbconfig.c  falloc.c  fprint.c  fprint.h  hdrNVR.c  header.c  jhash.h  legacy.c  poptDB.c  rpmdb.c  rpmdb.h  rpmhash.c  rpmhash.h  rpmvercmp.c  tagname.c
rpmio/: Makefile.am  bsearch.h  digest.c  macro.c  rpmerr.h  rpmio.c  rpmio.h  rpmio_internal.h  rpmlog.c  rpmmacro.h  rpmmalloc.c  rpmpgp.c  rpmpgp.h  rpmrpc.c  strcasecmp.c  url.c
scripts/: .provides.sh  0common-files.req.list  0ldconfig.filetrigger  Makefile.am  brp-adjust_libraries  brp-adjust_libraries.in  brp-alt.in  brp-bytecompile_python  brp-bytecompile_python.in  brp-check_contents.in  brp-cleanup  brp-cleanup.in  brp-compress.in  brp-debuginfo.in  brp-fix-perms  brp-fix-perms.in  brp-fixup.in  brp-strip.in  brp-verify_elf.in  check-files  check-files.in  compress_files.in  convertrpmrc.sh  cpanflute  cpanflute2  cpp.req.files  cpp.req.in  cross-build  debuginfo.prov.files  debuginfo.prov.in  debuginfo.req.files  debuginfo.req.in  delayed_rebuilddb  files.req.files.in  files.req.in  files.req.list  find-debuginfo-files.in  find-lang  find-lang.in  find-package  (+56 more)
sign/: Makefile.am  rpmgensig.c
tests/: Makefile.am  atlocal.in  macros.in  rpmdb.at  rpmdepmatch.at  rpmgeneral.at  rpmi.at  rpmquery.at  rpmrc.in  rpmspec.at  rpmtests.at  rpmvercmp.at  rpmverify.at
tests/data/SPECS/: symlinktest.spec
tools/: Makefile.am  debugedit.c  dump.c  dump_ld_config.c  dumpdb.c  filesize.c  javadeps.c  mkset.c  pdeath_execute.c  relative.c  rpmevrcmp.c  rpmsort.c  rpmvercmp.c  sepdebugcrcfix.c  setcmp.c  suggest_bpp.c
